[package]
name = "dsntk-test-runner"
version = "0.0.1"
authors = ["Dariusz Depta <depta@engos.de>"]
description = "Test runner for Decision Toolkit"
documentation = "https://docs.rs/dsntk-test-runner"
repository = "https://github.com/dsntk/dsntk-test-runner.git"
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
base64 = "0.22.0"
http = "1.1.0"
regex = "1.10.4"
reqwest = { version = "0.12.3", default-features = false, features = ["blocking", "json", "rustls-tls"] }
roxmltree = "0.19.0"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
serde_yaml = "0.9.33"
url = "2.5.0"
