[package]
name = "dsntk-test-runner"
version = "0.0.2"
authors = ["Dariusz Depta <depta@engos.de>"]
description = "Test runner for Decision Toolkit"
documentation = "https://docs.rs/dsntk-test-runner"
repository = "https://github.com/DecisionToolkit/dsntk-test-runner.git"
license = "MIT OR Apache-2.0"
edition = "2021"
publish = false

[dependencies]
antex = "0.0.8"
base64 = "0.22.1"
http = "1.2.0"
iso8601-duration = "0.2.0"
regex = "1.11.1"
reqwest = { version = "0.12.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
roxmltree = "0.20.0"
rust_decimal = "1.36.0"
rust_decimal_macros = "1.36.0"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
serde_yaml = "0.9.33"
url = "2.5.4"
